work on WS2812B program

--- a/WS2812B_AddressableLED_TM4C123/WS2812B_AddressableLED_TM4C123.uvprojx
+++ b/WS2812B_AddressableLED_TM4C123/WS2812B_AddressableLED_TM4C123.uvprojx
@@ -335,7 +335,7 @@
               <MiscControls></MiscControls>
               <Define>rvmdk PART_TM4C123GH6PM</Define>
               <Undefine></Undefine>
-              <IncludePath>..;..\..\..;..\..\inc;..\..\TivaWare_C_Series-2.1.1.71\inc</IncludePath>
+              <IncludePath>..;..\..\..;..\..\inc;..\..\TivaWare_C_Series-2.1.1.71\inc;..\..\TivaWare_C_Series-2.1.1.71\inc</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
